--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
               <a class="nav-link" href="#about-me"> About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#left-service-section"> Services </a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#testimonial"> Testimonial </a>
             </li>
           </ul>
@@ -49,22 +46,21 @@
     <!--Home Page Content-->
     <main class="home-page">
       <section>
-        <h2 class="sr-only">Full Stack Web Developer</h2>
         <!-- Hidden heading -->
         <article class="content">
           <div class="text-container">
             <h2>
               Hi there. I am Ilana, a
               <br />
-              Full Stack Web Developer.
+              Junior Full Stack Web Developer.
             </h2>
             <p>
               I design and develop digital experiences that are functional and
               beautiful.
             </p>
-            <a href="#say-hello-heading" class="btn btn-primary">
+            <a href="mailto:ilanao89@gmail.com" class="btn btn-primary">
               Get in Touch
-            </a>
+            </a>            
           </div>
           <img
             src="../img/Selfie.png"
@@ -78,28 +74,26 @@
       <div class="about">
         <h2 class="about-me-name">ABOUT ME</h2>
         <p>
-          Lorem ipsum dolor sit amet. Sit galisum veritatis et nemo unde qui
-          eius recusandae aut voluptatem modi cum accusantium voluptate et nisi
-          autem. Ut praesentium dolore aut perspiciatis mollitia aut odio sint
-          et saepe facere est nihil animi. Et corporis odio hic dolorem facilis
-          et sunt soluta et corporis voluptatem. Aut cupiditate velit et eveniet
-          alias ex laboriosam illo.
+          I recently completed an intensive Full Stack Web Development boot
+          camp, specialising in the MERN stack (MongoDB, Express, React,
+          Node.js). During the program, I gained hands-on experience in building
+          dynamic, data-driven web applications.
         </p>
         <p>
-          Lorem ipsum dolor sit amet. Sit galisum veritatis et nemo unde qui
-          eius recusandae aut voluptatem modi cum accusantium voluptate et nisi
-          autem. Ut praesentium dolore aut perspiciatis mollitia aut odio sint
-          et saepe facere est nihil animi. Et corporis odio hic dolorem facilis
-          et sunt soluta et corporis voluptatem. Aut cupiditate velit et eveniet
-          alias ex laboriosam illo.
+          Before the boot camp, I worked with Wix and WordPress, which I taught
+          myself. During my boot camp, I fell in love with React and Redux for
+          building modern web applications. Working with NoSQL databases also
+          piqued my interest, and I would love to start learning more about
+          databases in general. Through real-world projects, I developed
+          practical skills in problem-solving, responsive design, and creating
+          end-to-end web solutions.
         </p>
         <p>
-          Lorem ipsum dolor sit amet. Sit galisum veritatis et nemo unde qui
-          eius recusandae aut voluptatem modi cum accusantium voluptate et nisi
-          autem. Ut praesentium dolore aut perspiciatis mollitia aut odio sint
-          et saepe facere est nihil animi. Et corporis odio hic dolorem facilis
-          et sunt soluta et corporis voluptatem. Aut cupiditate velit et eveniet
-          alias ex laboriosam illo.
+          My passion for coding drives me to constantly enhance my skills, and I
+          am committed to delivering beautifully designed and user-friendly web
+          applications. As I begin my journey as a junior frontend developer,
+          I’m excited to continue learning and improving with every project I
+          take on.
         </p>
       </div>
       <section class="other-things">
@@ -177,18 +171,18 @@
             <img src="../img/blank_img_2.png" alt="Blank Image" />
           </div>
           <div class="text-port">
-            <h3>Name of Portfolio</h3>
+            <h3>To-Do-List</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Consectetur aliquid qui in quia, voluptas saepe animi alias
               delectus vel facilis nihil doloremque necessitatibus, possimus
               quidem perspiciatis. Praesentium, assumenda nostrum. Aliquam?
             </p>
-            <a
-              href="../Foodie_Order_System.zip"
-              download
-              class="btn btn-primary">
-              Download
+            <a href="https://llamailana.github.io/to-do-list/" target="_blank" class="btn btn-primary">
+              Open React App
+            </a>
+            <a href="https://github.com/LlamaIlana/to-do-list.git" target="_blank" class="btn btn-secondary">
+              View on GitHub
             </a>
           </div>
         </section>
