--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="#about-me"> About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#testimonial"> Testimonial </a>
+              <a class="nav-link" href="#tools"> Tools </a>
             </li>
           </ul>
         </div>
@@ -60,7 +60,7 @@
             </p>
             <a href="mailto:ilanao89@gmail.com" class="btn btn-primary">
               Get in Touch
-            </a>            
+            </a>
           </div>
           <img
             src="../img/Selfie.png"
@@ -173,15 +173,21 @@
           <div class="text-port">
             <h3>To-Do-List</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur aliquid qui in quia, voluptas saepe animi alias
-              delectus vel facilis nihil doloremque necessitatibus, possimus
-              quidem perspiciatis. Praesentium, assumenda nostrum. Aliquam?
+              This is a to-do list application built using React and Redux to
+              manage tasks efficiently. The app allows users to add, edit,
+              delete, and mark tasks as completed, with a clean and
+              user-friendly interface.
             </p>
-            <a href="https://llamailana.github.io/to-do-list/" target="_blank" class="btn btn-primary">
+            <a
+              href="https://llamailana.github.io/to-do-list/"
+              target="_blank"
+              class="btn btn-primary">
               Open React App
             </a>
-            <a href="https://github.com/LlamaIlana/to-do-list.git" target="_blank" class="btn btn-secondary">
+            <a
+              href="https://github.com/LlamaIlana/to-do-list.git"
+              target="_blank"
+              class="btn btn-secondary">
               View on GitHub
             </a>
           </div>
@@ -191,25 +197,32 @@
             <img src="../img/blank_img_3.png" alt="Blank Image" />
           </div>
           <div class="text-port">
-            <h3>Name of Portfolio</h3>
+            <h3>E-commerce Web Application</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur aliquid qui in quia, voluptas saepe animi alias
-              delectus vel facilis nihil doloremque necessitatibus, possimus
-              quidem perspiciatis. Praesentium, assumenda nostrum. Aliquam?
+              This project is an e-commerce web application built using React
+              and Redux for state management. It allows users to browse
+              products, add them to the cart, and proceed to checkout. The app
+              also features a login/registration system, a cart system with the
+              ability to remove items, and a modal for collection information.
             </p>
             <a
-              href="../Foodie_Order_System.zip"
-              download
+              href="https://llamailana.github.io/FurnitureWebStore/"
+              target="_blank"
               class="btn btn-primary">
-              Download
+              Open React App
+            </a>
+            <a
+              href="https://github.com/LlamaIlana/FurnitureWebStore.git"
+              target="_blank"
+              class="btn btn-secondary">
+              View on GitHub
             </a>
           </div>
         </section>
       </div>
     </div>
     <!--My Tools-->
-    <h2 class="my-tools-name">MY TOOLS</h2>
+    <h2 class="my-tools-name" id="tools">MY TOOLS</h2>
     <div class="section-container">
       <div class="tools">
         <section class="front-end-tools">
