--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div id="port-container">
         <section class="port">
           <div class="portfolio-image-1">
-            <img src="../img/Port1.png" alt="Name of Portfolio" />
+            <img src="../img/Port1.png" alt="Foodie" />
           </div>
           <div class="text-port">
             <h3>Foodie Order System</h3>
@@ -167,8 +167,8 @@
           </div>
         </section>
         <section class="port">
-          <div class="portfolio-image-1">
-            <img src="../img/blank_img_2.png" alt="Blank Image" />
+          <div class="portfolio-image-2">
+            <img src="../img/to_do_list.png" alt="to-do-list" />
           </div>
           <div class="text-port">
             <h3>To-Do-List</h3>
@@ -194,7 +194,7 @@
         </section>
         <section class="port">
           <div class="portfolio-image-3">
-            <img src="../img/blank_img_3.png" alt="Blank Image" />
+            <img src="../img/furniture.png" alt="FurnitureWebStore" />
           </div>
           <div class="text-port">
             <h3>E-commerce Web Application</h3>
