--- a/index.html
+++ b/index.html
@@ -217,6 +217,25 @@
               class="btn btn-secondary">
               View on GitHub
             </a>
+            <h3>Weather Application</h3>
+            <p>
+              React app that provides real-time weather updates for any city
+              around the world. Powered by the WeatherAPI, the app allows users
+              to easily check the current temperature, weather conditions,
+              humidity, and more for a specified city.
+            </p>
+            <a
+              href="https://llamailana.github.io/FurnitureWebStore/"
+              target="_blank"
+              class="btn btn-primary">
+              Open React App
+            </a>
+            <a
+              href="https://github.com/LlamaIlana/FurnitureWebStore.git"
+              target="_blank"
+              class="btn btn-secondary">
+              View on GitHub
+            </a>
           </div>
         </section>
       </div>
