Your commit message

--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
               class="btn btn-secondary">
               View on GitHub
             </a>
+          </div>
+        </section>
+        <section class="port">
+          <div class="portfolio-image-4">
+            <img src="../img/to_do_list.png" alt="to-do-list" />
+          </div>
+          <div class="text-port">
             <h3>Weather Application</h3>
             <p>
               React app that provides real-time weather updates for any city
@@ -225,13 +232,13 @@
               humidity, and more for a specified city.
             </p>
             <a
-              href="https://llamailana.github.io/FurnitureWebStore/"
+              href="https://llamailana.github.io/weather-app/"
               target="_blank"
               class="btn btn-primary">
               Open React App
             </a>
             <a
-              href="https://github.com/LlamaIlana/FurnitureWebStore.git"
+              href="https://github.com/LlamaIlana/weather-app.git"
               target="_blank"
               class="btn btn-secondary">
               View on GitHub
