--- a/index.html
+++ b/index.html
@@ -142,28 +142,29 @@
       <div id="port-container">
         <section class="port">
           <div class="portfolio-image-1">
-            <img src="../img/Port1.png" alt="Foodie" />
+            <img src="./img/online_shop.png" alt="Shop" />
           </div>
           <div class="text-port">
-            <h3>Foodie Order System</h3>
+            <h3>Online Store</h3>
             <p>
-              The code defines a simple order-taking system that prompts users
-              for a main ingredient they wish to order. It fetches meal data
-              based on the user input from an external API and randomly selects
-              a meal from the available options. Each order is stored in an
-              array as an object containing details like the meal name, order
-              number, and status. Users can mark their orders as complete, and
-              the system tracks both the full order history and the last order
-              placed, saving this data in session storage for potential future
-              retrieval. The code allows for recursive prompts, enabling users
-              to place multiple orders or complete existing ones seamlessly.
+              This project is an e-commerce web application built using React
+              and Redux for state management. It allows users to browse
+              products, add them to the cart, and proceed to checkout. The app
+              also features a login/registration system, a cart system with the
+              ability to remove items, and a modal for collection information.
             </p>
             <a
-              href="../Foodie_Order_System.zip"
-              download
+              href="https://furniture-online-ap.netlify.app/"
+              target="_blank"
               class="btn btn-primary">
-              Download
+              Live Site
             </a>
+            <a
+            href="https://github.com/LlamaIlana/furniture_online_store"
+            target="_blank"
+            class="btn btn-secondary">
+            GitHub
+          </a>
           </div>
         </section>
         <section class="port">
@@ -182,13 +183,13 @@
               href="https://llamailana.github.io/to-do-list/"
               target="_blank"
               class="btn btn-primary">
-              Open React App
+              Live Site
             </a>
             <a
               href="https://github.com/LlamaIlana/to-do-list.git"
               target="_blank"
               class="btn btn-secondary">
-              View on GitHub
+              GitHub
             </a>
           </div>
         </section>
@@ -209,13 +210,13 @@
               href="https://llamailana.github.io/FurnitureWebStore/"
               target="_blank"
               class="btn btn-primary">
-              Open React App
+              Live Site
             </a>
             <a
               href="https://github.com/LlamaIlana/FurnitureWebStore.git"
               target="_blank"
               class="btn btn-secondary">
-              View on GitHub
+              GitHub
             </a>
           </div>
         </section>
@@ -235,13 +236,13 @@
               href="https://llamailana.github.io/weather-app/"
               target="_blank"
               class="btn btn-primary">
-              Open React App
+              Live Site
             </a>
             <a
               href="https://github.com/LlamaIlana/weather-app.git"
               target="_blank"
               class="btn btn-secondary">
-              View on GitHub
+              GitHub
             </a>
           </div>
         </section>
