--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
             <img src="./img/online_shop.png" alt="Shop" />
           </div>
           <div class="text-port">
-            <h3>Online Store</h3>
+            <h3>iTunes Search Web App</h3>
             <p>
-              This project is an e-commerce web application built using React
-              and Redux for state management. It allows users to browse
-              products, add them to the cart, and proceed to checkout. The app
-              also features a login/registration system, a cart system with the
-              ability to remove items, and a modal for collection information.
+              Infinity Search is an application that allows users to search for
+              a wide variety of media content across different categories.
+              Whether you're looking for music, movies, TV series, software,
+              podcasts, short films, ebooks, or browsing all categories,
+              Infinity Search provides a seamless search experience.
             </p>
             <a
               href="https://furniture-online-ap.netlify.app/"
@@ -160,11 +160,11 @@
               Live Site
             </a>
             <a
-            href="https://github.com/LlamaIlana/furniture_online_store"
-            target="_blank"
-            class="btn btn-secondary">
-            GitHub
-          </a>
+              href="https://github.com/LlamaIlana/furniture_online_store"
+              target="_blank"
+              class="btn btn-secondary">
+              GitHub
+            </a>
           </div>
         </section>
         <section class="port">
@@ -207,13 +207,13 @@
               ability to remove items, and a modal for collection information.
             </p>
             <a
-              href="https://llamailana.github.io/FurnitureWebStore/"
+              href="https://furniture-online-ap.netlify.app/"
               target="_blank"
               class="btn btn-primary">
               Live Site
             </a>
             <a
-              href="https://github.com/LlamaIlana/FurnitureWebStore.git"
+              href="https://github.com/LlamaIlana/furniture_online_store"
               target="_blank"
               class="btn btn-secondary">
               GitHub
@@ -222,7 +222,7 @@
         </section>
         <section class="port">
           <div class="portfolio-image-4">
-            <img src="../img/to_do_list.png" alt="to-do-list" />
+            <img src="./img/weather_app.png" alt="to-do-list" />
           </div>
           <div class="text-port">
             <h3>Weather Application</h3>
@@ -233,13 +233,13 @@
               humidity, and more for a specified city.
             </p>
             <a
-              href="https://llamailana.github.io/weather-app/"
+              href="https://weather-now-ap.netlify.app/"
               target="_blank"
               class="btn btn-primary">
               Live Site
             </a>
             <a
-              href="https://github.com/LlamaIlana/weather-app.git"
+              href="https://github.com/LlamaIlana/weather_app"
               target="_blank"
               class="btn btn-secondary">
               GitHub
